Bug 465407 - startplasma-x11 crashes when trying to boot from KDE neon Developer Edition live image
Summary: startplasma-x11 crashes when trying to boot from KDE neon Developer Edition l...
Status: RESOLVED FIXED
Alias: None
Product: neon
Classification: KDE Neon
Component: Packages Unstable Edition (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: Neon Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-02-07 08:59 UTC by popov895
Modified: 2023-02-09 11:15 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Crash (2.93 MB, image/jpeg)
2023-02-07 08:59 UTC, popov895
Details

Note You need to log in before you can comment on or make changes to this bug.
Description popov895 2023-02-07 08:59:01 UTC
Created attachment 156018 [details]
Crash

SUMMARY

startplasma-x11 crashes when trying to boot from KDE neon Developer Edition live image with the message:

> Signal: Segmentation fault (11) 

STEPS TO REPRODUCE

1. Flash KDE neon Developer Edition to a flash drive
2. Boot from this flash drive

SOFTWARE/OS VERSIONS

KDE neon Developer Edition Version: neon-developer-20230206-1616.iso

ADDITIONAL INFORMATION

The previous version of the image also crashed.
Comment 1 Jonathan Riddell 2023-02-07 19:39:52 UTC
This happens for new users and live cd for unstable edition, reason is unclear for now, I've rebuilt things and tried locally to revert to old versions of breeze, plasma-workspace, qtbase, no luck yet.

[KCrash Handler]
#5  0x00007f41c549d1d7 in QStyleHints::startDragDistance() const () from /lib/x86_64-linux-gnu/libQt5Gui.so.5
#6  0x00007f41bf3ce84c in Breeze::WindowManager::WindowManager (this=0x558a94613610, parent=0x558a9456a540) at /home/jr/src/kde/breeze/kdegit/breeze/kstyle/breezewindowmanager.cpp:131
#7  0x00007f41bf39c6ca in Breeze::Style::Style (this=0x558a9456a540) at /home/jr/src/kde/breeze/kdegit/breeze/kstyle/breezestyle.cpp:226
#8  0x00007f41bf3cb8fe in Breeze::StylePlugin::create (this=0x558a94547320, key=...) at /home/jr/src/kde/breeze/kdegit/breeze/kstyle/breezestyleplugin.cpp:18
#9  0x00007f41c5d39312 in QStyleFactory::create(QString const&) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#10 0x0000558a936079fe in LookAndFeelManager::setWidgetStyle (this=0x7ffd6d62fe80, style=...) at /home/jr/src/kde/plasma-workspace/kdegit/plasma-workspace/kcms/lookandfeel/lookandfeelmanager.cpp:234
#11 0x0000558a9360b1b0 in LookAndFeelManager::save (this=0x7ffd6d62fe80, package=..., previousPackage=..., applyMask=...) at /home/jr/src/kde/plasma-workspace/kdegit/plasma-workspace/kcms/lookandfeel/lookandfeelmanager.cpp:486
#12 0x0000558a935f300b in setupPlasmaEnvironment () at /home/jr/src/kde/plasma-workspace/kdegit/plasma-workspace/startkde/startplasma.cpp:361
#13 0x0000558a935ef69d in main (argc=1, argv=0x7ffd6d630068) at /home/jr/src/kde/plasma-workspace/kdegit/plasma-workspace/startkde/startplasma-x11.cpp:65
Comment 2 popov895 2023-02-07 20:51:14 UTC
Docker image is also affected.
Comment 3 Jonathan Riddell 2023-02-08 16:53:56 UTC
This commit seems to be the problem, if I remove the "Test if style can be installed before updating the config" code then it succeessfully writes the config and startplasma-x11 runs without a crash.

https://invent.kde.org/plasma/plasma-workspace/-/commit/3d14e60814131e59673baf3a01df0e10a70e958e#1471a15d258da85506d4c5e4fe278a9aa5d8b6a0_181_183
Comment 4 David Edmundson 2023-02-08 17:00:50 UTC
See https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2592 that I did yesterday
Comment 5 Fushan Wen 2023-02-09 11:15:25 UTC
Git commit 1d2fc704b0bd5396cec23418efd32abdd81429aa by Fushan Wen, on behalf of David Edmundson.
Committed on 09/02/2023 at 11:15.
Pushed by fusionfuture into branch 'master'.

kcms/lookandfeel: Guard for QGuiApplication before using styles

LookandFeelManager is invoked from QCoreApplcation startplasma. This
must remain a QCoreApplication as it starts up kwin_wayland.

This newly added safety check in lookandfeelmanager meant we loaded the
style. Use of QGui libraries in a QCoreApplication is undefined or
worse.

startplasma should only call us with a hardcoded default.

M  +8    -5    kcms/lookandfeel/lookandfeelmanager.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/1d2fc704b0bd5396cec23418efd32abdd81429aa