kcms/lookandfeel: Guard for QGuiApplication before using styles

LookandFeelManager is invoked from QCoreApplcation startplasma. This
must remain a QCoreApplication as it starts up kwin_wayland.

This newly added safety check in lookandfeelmanager meant we loaded the
style. Use of QGui libraries in a QCoreApplication is undefined or
worse.

startplasma should only call us with a hardcoded default.

BUG: 465407